--- a/en/g/grow op.746562.wikitext
+++ b/en/g/grow op.746562.wikitext
@@ -10,5 +10,8 @@
 {{en-noun|sg=[[grow]] [[op]]}}
 
 # {{Canada}} An illegal [[marijuana]]-[[grow]]ing [[operation]], usually indoors.
-#* Vancouver ''Province'', 21 August 1998, final edition, p A8.
-#*: ''Police sweep massive '''grow op''': ‘Sophisticated organized crime’ behind pot: Police'' [headline]
+#* '''1998''' Aug. 21, ''Province'' (Vancouver, Canada), final edition, p. A8 [headline]:
+#*: Police sweep massive '''grow op''': ‘Sophisticated organized crime’ behind pot: Police
+
+====Synonyms====
+* [[grow house]]
