t+pt:[[moinho]] t-balance ([[WT:EDIT|Assisted]]) <mill#13427627>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -91,6 +91,7 @@
 {{trans-mid}}
 * Greek: {{t+|el|μύλος|m|tr=mýlos}}
 * Latvian: {{t|lv|maltuve}}
+* Portuguese: {{t|pt|moinho|m}}
 * [[Scottish Gaelic]]: {{t-|gd|muileann|m|f|xs=Scottish Gaelic}}
 {{trans-bottom}}
 
