t+km:[[ទន្សាយគល់]] ([[WT:EDIT|Assisted]]) <rabbit#13428599>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -87,6 +87,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Irish: {{t+|ga|coinín|xs=Irish}}
 * Italian: {{t+|it|coniglio|m}}
 * Japanese: {{t|ja|兎|tr=[[うさぎ]], usagi|sc=Jpan}}, {{t|ja|ウサギ|tr=usagi|sc=Jpan}}
+* [[Khmer]]: {{t|km|ទន្សាយគល់|tr=tʊənsaay kʊəl|sc=Khmr}}
 * Korean: {{t+|ko|토끼|tr=tokki|sc=Hang}}
 * Kurdish:
 *: Kurmanji: {{t|ku|kêroşk}}, {{t|ku|xirrnîfk}}
