--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -62,7 +62,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * [[Isthmus Zapotec]]: [[chisa]]
 * Italian: {{t-|it|scoiattolo|m}}
 * Japanese: {{t-|ja|栗鼠|tr=りす, risu}}
-* [[Karachay-Balkar]]: {{tø|krc|эрлен|tr=erlen|sc=Cyrl}},  {{qualifier|karachay}} {{tø|krc|агъач къоян|tr=ağaç qoyan|sc=Cyrl}},  {{qualifier|obsolete}} {{tø|krc|тыйын|tr=tıyın|sc=Cyrl}}
+* [[Karachay-Balkar]]: {{tø|krc|эрлен|tr=erlen|sc=Cyrl}}, {{qualifier|karachay}} {{tø|krc|агъач къоян|tr=ağaç qoyan|sc=Cyrl}}, {{qualifier|obsolete}} {{tø|krc|тыйын|tr=tıyın|sc=Cyrl}}
 * Kazakh: {{t|kk|тиін|tr=tiïn|sc=Cyrl|xs=Kazakh}}
 * [[Khakas]]: {{tø|kjh|тиин|tr=tiin|sc=Cyrl}}
 * Korean: {{t+|ko|다람쥐|tr=daramjwi|sc=Hang}}
@@ -116,7 +116,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * [[Volapük]]: {{t+|vo|yat|xs=Volapük}}, {{t-|vo|hiyat|xs=Volapük}} (he-squirrel), {{t-|vo|jiyat|xs=Volapük}} (she-squirrel)
 * Welsh: [[gwiwer]] {{f}}
 * [[West Frisian]]: [[iikhoarntsje]] {{n}}
-* [[Wolof]]: {{t|wo|jaar ji}}
+* [[Wolof]]: {{t|wo|jaar|alt=jaar ji}}
 * [[Yakut]]: {{tø|sah|тииҥ|tr=tiiñ|sc=Cyrl}}
 * Yiddish: {{t-|yi|וועוורקע|f|tr=veverke|xs=Yiddish}}, {{t-|yi|וועווריק|m|tr=vevrik|xs=Yiddish}}
 {{trans-bottom}}
