/* English */ <whatever it takes#13431078>

--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -4,7 +4,7 @@
 {{en-noun|sg=[[whatever]] [[it]] [[takes]]|-}}
 
 # Anything that may be [[required]] to [[achieve]] an [[objective]].
-* We stand ready to do '''whatever it takes'''.
+#: We stand ready to do '''whatever it takes'''.
 
 ===Adverb===
 {{en-adv|-}}
