--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -253,15 +253,16 @@ See {{l|da|bide}}.
 ==Volapük==
 
 ===Noun===
-'''bid'''
+{{vo-noun}}
 
 # [[sort]]; [[kind]]; [[type]]
 # [[race]]
 
+====Declension====
+{{vo-decl-noun}}
+
 ====Synonyms====
 * [[sot#Volapük|sot]]
-
-[[Category:Volapük nouns]]
 
 [[ar:bid]]
 [[br:bid]]
