--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -56,6 +56,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 * Swedish: {{t+|sv|minimum|n}}
 * [[Telugu]]: [[కనిష్టం]] (kanishTaM)
 * Vietnamese: {{t+|vi|tối thiểu|xs=Vietnamese}}
+* [[Volapük]]: {{t|vo|minum}}
 {{trans-bottom}}
 
 [[Category:English nouns with irregular plurals]]
