--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -6,7 +6,7 @@
 * {{audio|en-us-vodka.ogg|Audio (US)}}
 
 ===Etymology===
-Slavic {{term||voda}}, {{term||woda}}, meaning [[water]], plus the diminutive suffix {{term||-ka}}. Historical documentary research of V. Pokhlyobkin suggests the derivation via the usage "dilution (of [[distil]]late) with water", as used in expressions "vodka of grain wine" and similar; {{term|хлебное вино|sc=Cyrl|lang=ru||grain wine}} is an archaic Russian name for vodka.
+{{etyl|sla|en}} {{term||voda}}, {{term||woda}}, meaning [[water]], plus the diminutive suffix {{term||-ka}}. Historical documentary research of V. Pokhlyobkin suggests the derivation via the usage "dilution (of [[distil]]late) with water", as used in expressions "vodka of grain wine" and similar; {{term|хлебное вино|sc=Cyrl|lang=ru||grain wine}} is an archaic Russian name for vodka.
 
 The standard of identity is from the [[s:Code of Federal Regulations|Code of Federal Regulations]], title 27, section 5.22(a)(1).
 
@@ -83,9 +83,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * [[Macedonian]]: {{t-|mk|вотка|f|tr=vótka}}
 {{trans-bottom}}
 
-[[Category:Distilled beverages]]
-[[Category:Polish derivations]]
-[[Category:Russian derivations]]
+[[Category:en:Distilled beverages]]
 
 ----
 
