t+ru:[[изгиб]] ([[WT:EDIT|Assisted]]) <crook#13462032>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -52,6 +52,7 @@
 * Bulgarian: {{t|bg|извивка|f}}
 {{trans-mid}}
 * Finnish: {{t-|fi|taive}}
+* Russian: {{t|ru|изгиб|sc=Cyrl}}
 {{trans-bottom}}
 
 ====References====
