Reverted edits by [[Special:Contributions/72.35.123.158|72.35.123.158]] ([[User_talk:72.35.123.158|Talk]]); changed back to last version by [[User:SemperBlotto|SemperBlotto]] <biatch#13462745>

--- a/en/b/biatch.741988.wikitext
+++ b/en/b/biatch.741988.wikitext
@@ -7,7 +7,7 @@
 * [[beeyatch]]/[[beeyotch]]
 
 ===Pronunciation===
-* {{a|US}} {{IPA|/bee.ot.chʃ/}}
+* {{a|US}} {{IPA|/bi.ɑtʃ/}}
 
 ===Noun===
 {{en-noun|es}}
