--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -9,6 +9,7 @@
 #* '''1913''', [[w:John Galsworthy|John Galsworthy]], ''The Dark Flower'', ch. 6:
 #*: That stare was as if he saw her—a doll '''tricked out''' in garments labelled soul, spirit, rights, responsibilities, dignity, freedom—all so many words.
 # {{informal|transitive|of a [[motor vehicle]], etc.}} To [[mod]] or [[customize]] an object, typically for the purposes of [[personalization]] and enhancing [[performance]] capabilities such as the ability to perform [[stunt]]s.
+#: ''His friends were particularly impressed with the way he '''tricked out''' his [[wikipedia:Honda_Ruckus|Ruckus]].''
 #* '''2007''', Davide Kiley, "[http://www.businessweek.com/autos/content/apr2007/bw20070405_399949.htm Ford, Funkmaster Flex Co-Pimp a Ride]," ''Bloomberg Businessweek'', 5 April (retrieved 4 Aug. 2010):
 #*: '''Tricking out''' cars, trucks, and SUVs with the likes of body kits, engine boosters, custom colors, and wheels has become a $30 billion a year business.
 
