--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -87,7 +87,7 @@
 * Czech: {{t-|cs|závaží|n}}
 * Dutch: {{t+|nl|gewicht}}
 * Finnish: {{t+|fi|paino}}
-* French: {{t+|fr|poids}}
+* French: {{t+|fr|poids}}, {{t|fr|lest|m}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n|tr=város}}
 * Hungarian: {{t+|hu|súly}}
@@ -109,6 +109,7 @@
 * Chinese (Simplified): [[砝码]] (fá mǎ)
 * Estonian: {{t|et|kaaluma}}
 * Finnish: [[punnus]]
+* French: {{t|fr|poids|m}}
 * Greek: {{t+|el|ζύγι|n|tr=zíγi}}, {{t|el|σταθμά|n|p|tr=staθmá}}, {{t|el|σταθμίον|n|tr=staθmíon}}
 * Hungarian: {{t+|hu|súly}}
 {{trans-mid}}
@@ -124,12 +125,13 @@
 {{trans-top|sport device}}
 * Arabic: [[ثقل]]
 * Finnish: {{t+|fi|paino}}, {{t+|fi|puntti}}
+* French: {{t|fr|poids|m}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t-|el|βάρη|n|p|tr=vári}}
 * Hungarian: {{t+|hu|súly}}
 * Italian: {{t+|it|peso|m}}
-* Japanese: {{t|ja|重り|tr=omori}}
 {{trans-mid}}
+* Japanese: {{t|ja|重り|tr=omori}}
 * Russian: [[блин]] (blin) {{m}} ''disc'', [[гиря]] (gír'a) {{f}} ''dumbbell'', [[гантель]] (gantél') {{f}} ''barbell''
 * [[Scots]]: {{tø|sco|weicht|xs=Scots}}
 * Spanish: {{t-|es|pesa|f}}
@@ -188,7 +190,7 @@
 
 ====Translations====
 {{trans-top|add weight}}
-* French: {{t+|fr|alourdir}}
+* French: {{t+|fr|alourdir}}, {{t|fr|lester}}, {{t|fr|appesantir}}
 * German: {{t+|de|beschweren}}
 {{trans-mid}}
 * Italian: {{t-|it|appesantire}}
