example sentecns <mill#13482604>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -182,6 +182,7 @@ From the noun ''mill''
 # {{transitive}} To [[shape]], [[polish]], [[dress]] or [[finish]] using a machine.
 # {{transitive}} To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
 # {{intransitive}} (''followed by'' '''around''', '''about''', ''etc.'') To move about in an [[aimless]] fashion.
+#: I didn't have much to do, so I just '''milled around''' the town looking at the shops.
 
 =====Synonyms=====
 * {{sense|move about in an aimless fashion}} [[roam]], [[wander]]
