t+de:[[Bruchteil]] ([[WT:EDIT|Assisted]]) <fraction#13497343>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -62,6 +62,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Danish: {{t|da|brøkdel|c}}
 * Finnish: {{t-|fi|murto-osa}}
 * French: {{t+|fr|fraction|f}}
+* German: {{t|de|Bruchteil|m}}
 * Irish: {{t|ga|codán|m|xs=Irish}}
 * Italian: {{t-|it|frazione|f}}
 * Japanese: [[断片]] (dan-pen)
