Reverted edits by [[Special:Contributions/67.175.46.110|67.175.46.110]] ([[User_talk:67.175.46.110|Talk]]); changed back to last version by [[User:Flubot|Flubot]] <pig#13497865>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -5,7 +5,7 @@
 {{etyl|enm}} {{term|pigge||pig, piglet|lang=enm}}, from {{etyl|ang}} {{term||picga}} (attested only in compounds, such as {{term|picgbread|picgbrēad|mast, pig's food|lang=ang}}), pet-form related to {{etyl|gmw-lge|-}} {{term|Pugge||pet pig|lang=nds}}. Of uncertain origin.
 
 ===Pronunciation===
-* {{IPA|/pɪɡ/}} EMILIO
+* {{IPA|/pɪɡ/}}
 * {{audio|en-us-pig.ogg|Audio (US)}}
 * {{rhymes|ɪɡ}}
 
