--- a/en/i/ill-conceived.720288.wikitext
+++ b/en/i/ill-conceived.720288.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|not properly planned or thought through}}
+* Finnish: {{t|fi|huonosti suunniteltu}}
 {{trans-mid}}
 {{trans-bottom}}
 
