t+de:[[Mauswiesel]] t+de:[[Zwergwiesel]] t+de:[[Kleinwiesel]] t+de:[[Hermännchen]] t+vo:[[visaf]] t+de:[[Wiesel]] ([[WT:EDIT|Assisted]]) <weasel#13499259>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -41,7 +41,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Estonian: {{t+|et|nirk}}
 * Finnish: {{t+|fi|lumikko}}
 * French: {{t+|fr|belette|f}}
-* German: {{t+|de|Wiesel|n}}
+* German: {{t+|de|Wiesel|n}}, {{t|de|Mauswiesel|n}}, {{t|de|Zwergwiesel|n}}, {{t|de|Kleinwiesel|n}}, {{qualifier|popularly}} {{t|de|Hermännchen|n}}
 * Greek: {{t+|el|νυφίτσα|tr=nifítsa|f|sc=Grek}}
 * Hebrew: {{t|he|סמור|sc=Hebr|tr=samur}}
 * Hungarian: {{t+|hu|menyét}}
@@ -62,14 +62,17 @@ The verb comes from the supposed cunningness of the weasel.
 * Slovene: {{t+|sl|podlasica|f}}
 * Spanish: {{t+|es|comadreja|f}}
 * Turkish: {{t|tr|gelincik}}
+* [[Volapük]]: {{qualifier|male or female}} {{t|vo|visaf}}
 * [[West Frisian]]: {{t+|fy|wezeling|c|xs=West Frisian}}
 {{trans-bottom}}
 
 {{trans-top|any mammal of the genus ''Mustela''}}
 * Finnish: {{t+|fi|kärppä}}
+* German: {{t|de|Wiesel|n}}
 * Navajo: {{tø|nv|dlǫ́ʼii}}
 {{trans-mid}}
 * [[Scottish Gaelic]]: {{t-|gd|neas|f|xs=Scottish Gaelic}}
+* [[Volapük]]: {{qualifier|male or female}} {{t|vo|visaf}}
 * [[West Frisian]]: {{t-|fy|marter|c|xs=West Frisian}}
 {{trans-bottom}}
 
