--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -78,11 +78,11 @@ The verb comes from the supposed cunningness of the weasel.
 {{trans-bottom}}
 
 {{trans-top|any mammal of the family ''Mustelidae''}}
+* Esperanto: {{qualifier|male or female}} {{t|vo|musteledo}}, {{qualifier|male}} {{t|vo|virmusteledo}}, {{qualifier|female}} {{t|vo|musteledino}}
 * Finnish: {{t-|fi|näätäeläin}}
 * {{ttbc|id}}: [[luwak]]
 {{trans-mid}}
 * Irish: [[easóg]] {{f}}, [[an cailín uasasl]] {{m}}, [[an bheainín uasal]] {{f}}
-* [[Volapük]]: {{qualifier|male or female}} {{t|vo|musteledo}}, {{qualifier|male}} {{t|vo|virmusteledo}}, {{qualifier|female}} {{t|vo|musteledino}}
 {{trans-bottom}}
 
 {{checktrans-top}}
