--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -203,7 +203,7 @@ From {{proto|lang=ang|Germanic|batiz}}.
 ==Spanish==
 
 ===Noun===
-{{infl|es|noun|g=g}}
+{{infl|es|noun|g=f}}
 
 # [[beth]]; the Hebrew letter [[ב]]
 
