--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -83,7 +83,7 @@
 * German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t|de|Hausschwein|n}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}, {{t+|el|χοίρος|m|tr=choíros}}
 * Hawaiian: {{unicode|[[puaʻa]]}}
-* Hebrew: {{t|he|חזיר|m|tr=hazír|sc=Hebr}}
+* Hebrew: {{t|he|חזיר|m|tr=khazír|sc=Hebr}}, {{t|he|חֲזִיר|m|tr=khazír|sc=Hebr}}
 * Hindi: {{t|hi|सूअर|m|tr=sū'ar|sc=Deva}}
 * Hungarian: {{t+|hu|sertés}}, {{t+|hu|disznó}}, {{t+|hu|malac}}
 * Icelandic: {{t+|is|svín|n}}
