--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -25,6 +25,7 @@ From {{etyl|la}} {{term|multicolor|lang=la}}; see below.
 * German: {{t+|de|bunt}}, {{t-|de|vielfarbig}}, [[mehrfarbig]]
 * Italian: {{t+|it|multicolore}}
 * Latin: {{t-|la|multicolor}}
+* Malay: {{t|ms|pancawarna}}
 * Portuguese: [[multicor]]
 * Romanian: {{t+|ro|multicolor}}
 {{trans-bottom}}
