--- a/en/c/catch it.802385.wikitext
+++ b/en/c/catch it.802385.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Verb===
-{{infl|en|verb|head=to [[catch]] [[it]]}}
+{{en-verb|inf=[[catch]] [[it]]|catches it|catching it|caught it}}
 
 # {{idiomatic}} be severely reprimanded, punished, or beaten
 #* '''1860''', George Eliot , ''The Mill on the Floss''
@@ -17,6 +17,7 @@
 ===See also===
 * [[catch hell]]
 
-[[Category:English intransitive verbs]]
+[[Category:English predicates]]
+[[Category:English terms with placeholder "it"]]
 
 [[et:catch it]]
