--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -29,11 +29,11 @@
 * Norwegian: {{t|no|krigsfange|m}}
 * Persian: {{t|fa|اسیر|tr=asir|sc=fa-Arab}}, {{t|fa|بندی|tr=bandi|sc=fa-Arab}}
 * Polish: {{t|pl|jeniec wojenny|m}}
-* Portuguese: [[prisioneiro de guerra]] {{m}}, {{t|pt|prisioneiro de guerra|m}}
+* Portuguese: {{t|pt|prisioneiro de guerra|m}}
 * Russian: {{t+|ru|военнопленный|m|tr=vojennoplénnyj}}, {{t|ru|пленный|m|tr=plénnyj|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|prìosanach-chogaidh|m|xs=Scottish Gaelic}}
 * Slovak: [[zajatec]] {{m}} (''plural:'' zajatci)
-* Spanish: [[prisionero de guerra]] {{m}}, {{t|es|prisionero de guerra|m}}
+* Spanish: {{t|es|prisionero de guerra|m}}
 * Swedish: {{t|sv|krigsfånge}}
 * [[Telugu]]: [[యుద్ధ ఖైదీ]] (yuddha khaidee)
 * Ukrainian: {{t+|uk|бранець|m|tr=bránec'|xs=Ukrainian}}
