t+ru:[[вращательный]] ([[WT:EDIT|Assisted]]) <vortical#13503815>

--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -23,7 +23,7 @@ From (the stem of) {{etyl|la}} {{term|vortex|lang=la}} {{suffix||al}}.
 * German: {{t|de|kreisend}}, {{t|de|wirbelartig}}, {{t|de|wirbelnd}}
 {{trans-mid}}
 * Italian: {{t-|it|vorticoso}}
-* Russian: {{t|ru|вихревой}}
+* Russian: {{t|ru|вихревой}}, {{t|ru|вращательный|sc=Cyrl}}
 {{trans-bottom}}
 
 ===Anagrams===
