<have it large#13504461>

--- a/en/h/have it large.802701.wikitext
+++ b/en/h/have it large.802701.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Verb===
-{{en-verb|inf=to [[have]] [[it]] [[large]]|has it large|having it large|had it large}}
+{{en-verb|inf=[[have]] [[it]] [[large]]|has it large|having it large|had it large}}
 # {{idiomatic}} To engage intensely in pleasure-seeking activities
 #* '''1999''', Mick Middles, ''Manic Street Preachers'', page 193
 #*: Unlike Oasis, the point wasn't simply to '''have it large''' and live a whacked-out existence as professional rock stars.
