--- a/en/m/macrophallic.801849.wikitext
+++ b/en/m/macrophallic.801849.wikitext
@@ -5,6 +5,8 @@
 
 ===Adjective===
 {{en-adj|-}}
-
 # Having an exceptionally large [[penis]].
 #: ''It is advantageous to be '''macrophallic''' in the [[pornography]] industry.''
+
+====References====
+*[http://books.google.com/books?id=x7rY8uGk1OYC&pg=PA590&dq=%22macrophallic%22&hl=en&ei=LJ0aTqyqJIrn0QHLgq2YBQ&sa=X&oi=book_result&ct=result&resnum=3&ved=0CDYQ6AEwAg#v=onepage&q=%22macrophallic%22&f=false 1906 reference]
