/* Torres Strait Creole */ <at#13514700>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -388,14 +388,13 @@ From {{etyl|ota|sh}} {{term|آت|tr=at|sc=ota-Arab|lang=ota}}.
 ==Torres Strait Creole==
 
 ===Etymology===
-From {{etyl|en|tcs}} ''[[heart]]''.
+From {{etyl|en|tcs}} {{term|heart|lang=en}}.
 
 ===Noun===
-'''at'''
+{{infl|tcs|noun}}
 
 # [[heart]]
 
-[[Category:Torres Strait Creole nouns]]
 [[Category:tcs:Anatomy]]
 
 ----
