--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -243,7 +243,7 @@ From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt
 ===Conjunction===
 {{infl|fil|conjunction}}
 
-# [[and|And]].
+# [[and]]
 
 ----
 
