--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -102,7 +102,7 @@
 *: [[Old French]]: {{tø|fro|isle|f}}
 * [[Galician]]: {{t+|gl|illa|f|xs=Galician}}
 * Georgian: {{t-|ka|კუნძული|tr=kundzuli|sc=Geor|xs=Georgian}}
-* German: {{t+|de|Insel|f}}
+* German: {{t+|de|Insel|f}}, {{qualifier|poetic}} {{t|de|Eiland|n}}
 * Greek:
 *: Ancient: {{tø|grc|νῆσος|f|tr=nē̂sos|sc=polytonic|xs=Ancient Greek}}
 *: Modern: {{qualifier|formal}} {{t+|el|νήσος|f|tr=nísos}}, {{t+|el|νησί|n|tr=nisí}}
@@ -125,15 +125,16 @@
 * [[Khakas]]: {{tø|kjh|олтырых|tr=oltırıx|sc=Cyrl}}
 * [[Khmer]]: {{t-|km|កោះ|tr=goh|sc=Khmr|xs=Khmer}}
 * [[Komi]]: {{tø|kv|ді|tr=di|sc=Cyrl}}
+{{trans-mid}}
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
 * [[Kumyk]]: {{tø|kum|атав|tr=ataw|sc=Cyrl}}
-{{trans-mid}}
 * [[Kyrgyz]]: {{t-|ky|арал|tr=aral|sc=Cyrl|xs=Kyrgyz}}
 * [[Lao]]: {{t-|lo|ດອນ|tr=döön|sc=Laoo|xs=Lao}}
 * [[Latgalian]]: {{qualifier|ocean, sea}} {{tø|ltg|jiursola}}, {{qualifier|lake}} {{tø|ltg|azarsola}}, {{qualifier|river}} {{tø|ltg|upsola}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|sala|f|xs=Lithuanian}}
+* [[Low German]]: {{t|nds|Ailand|n}}
 * [[Low Saxon]]: {{t-|nds|Insel|xs=Low Saxon}}
 * [[Lower Sorbian]]: {{tø|dsb|kupa|f|xs=Lower Sorbian}},  {{tø|dsb|kupka|f}}
 * [[Luxembourgish]]: {{t-|lb|Insel|xs=Luxembourgish}}
