t+nv:[[tábąąh mąʼii]] ([[WT:EDIT|Assisted]]) <muskrat#13519481>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -51,6 +51,7 @@
 * [[Lower Sorbian]]: {{tø|dsb|bizamowy šćurk|xs=Lower Sorbian}}
 * [[Macedonian]]: {{t|mk|бизамски стаорец|m|tr=bízamski stáorec}}
 * Maltese: {{t|mt|far tal-misk ta’ l-ilma|xs=Maltese}}
+* Navajo: {{tø|nv|tábąąh mąʼii}}
 * Norwegian: {{t|no|bisamrotte}}
 * Polish: {{t+|pl|piżmak}}
 * Portuguese: {{t|pt|rato almiscareiro}}
