--- a/en/s/sales slip.776058.wikitext
+++ b/en/s/sales slip.776058.wikitext
@@ -6,4 +6,9 @@ A [[slip]] of paper given when a [[sale]] is made.
 ===Noun===
 {{en-noun}}
 
-#A [[receipt]] for a purchase.
+# A [[receipt]] for a purchase.
+
+====Template====
+{{trans-top|receipt for a purchase}}
+{{trans-mid}}
+{{trans-bottom}}
