removed [[Category:Planets]]; added [[Category:en:Planets]] using [[Help:Gadget-HotCat|HotCat]] <terrestrial planet#13521494>

--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -33,6 +33,6 @@
 ====Translations====
 * Dutch: [[aardse planeet]]
 * Romanian: [[terestru|terestrială]] [[planetă]] {{f}}
-[[Category:Planets]]
+[[Category:en:Planets]]
 
 [[et:terrestrial planet]]
