--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -13,7 +13,7 @@ Derived from the stingingly painful sensation of table salt deliberately being r
 
 ====Usage notes====
 * For {{term|rub}}, one can substitute verbs such as {{term|add}}, {{term|pour}}, {{term|put}}, possibly requiring a change in the preposition {{term|in}}.
-* See [[salt in the wounds]] for variations in that portion of the expression.
+* See [[salt in the wound]] for variations in that portion of the expression.
 
 ====Synonyms====
 * [[add insult to injury]]
