--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -4,7 +4,8 @@
 From Latin.  Coined by [[w:Edward Gibbon|Edward Gibbon]].
 
 ===Proper noun===
-{{en-proper noun|sg=[[Pax]] [[Romana]]}}
+{{en-proper noun|sg=[[pax|Pax]] [[Romana]]}}
+
 # The long period of relative peace and minimal expansion by military force experienced by the Roman Empire between 27 BC and 180 AD.
 
 ====Synonyms====
