--- a/en/p/Pax Augusta.855980.wikitext
+++ b/en/p/Pax Augusta.855980.wikitext
@@ -1,4 +1,6 @@
 ==English==
+
 ===Proper noun===
-{{en-proper noun|sg=[[Pax]] [[Augusta]]}}
-# The [[Pax Romana]]
+{{en-proper noun|sg=[[pax|Pax]] [[Augusta]]}}
+
+# The [[Pax Romana]].
