--- a/en/s/save up.746191.wikitext
+++ b/en/s/save up.746191.wikitext
@@ -10,5 +10,5 @@
 ===References===
 *"[http://dictionary.reference.com/search?r=2&q=save+up save up]" in the ''Dictionary.com Unabridged, v1.0.1'', Lexico Publishing Group, 2006.
 *"[http://www.rhymezone.com/r/rhyme.cgi?Word=save_up save up]" at ''Rhymezone''  © 2006 Datamuse.
-
+[[Category:English phrasal verbs]]
 [[et:save up]]
