--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -49,7 +49,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * French: {{t+|fr|écureuil|m}}
 * [[Friulian]]: [[sghirat]] {{m}}, [[sghirate]] {{g|Friulian}}
 * [[Galician]]: {{t+|gl|esquío|m|xs=Galician}}
-* {{trreq|Georgian}}
+* Georgian: {{t|ka|ციყვი|tr=c'iqvi|sc=Geor}}
 * German: {{t+|de|Eichhörnchen|n}}, {{t+|de|Hörnchen|n}}
 * Greek: {{t+|el|σκίουρος|m|tr=skíouros}}
 * Hebrew: {{t+|he|סנאי|m|tr=snai}}
