t+km:[[កំប្រុក]] t-balance ([[WT:EDIT|Assisted]]) <squirrel#13541022>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -65,13 +65,14 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * [[Karachay-Balkar]]: {{tø|krc|эрлен|tr=erlen|sc=Cyrl}}, {{qualifier|karachay}} {{tø|krc|агъач къоян|tr=ağaç qoyan|sc=Cyrl}}, {{qualifier|obsolete}} {{tø|krc|тыйын|tr=tıyın|sc=Cyrl}}
 * Kazakh: {{t|kk|тиін|tr=tiïn|sc=Cyrl|xs=Kazakh}}
 * [[Khakas]]: {{tø|kjh|тиин|tr=tiin|sc=Cyrl}}
+* [[Khmer]]: {{t|km|កំប្រុក|tr=kɑmprok|sc=Khmr}}
 * Korean: {{t+|ko|다람쥐|tr=daramjwi|sc=Hang}}
 * [[Kumyk]]: {{tø|kum|атъялман|tr=atyalman|sc=Cyrl}}
 * Kurdish: {{ku-Arab|[[سیمۆره‌]]}}
 * [[Kyrgyz]]: {{t|ky|тыйын чычкан|tr=tıyın çıçqan|sc=Cyrl|xs=Kyrgyz}}
 * [[Ladin]]: [[schirata]] {{f}}
-* Latin: {{t+|la|sciurus|m}}
 {{trans-mid}}
+* Latin: {{t+|la|sciurus|m}}
 * Latvian: {{t-|lv|vāvere|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|voverė|f|xs=Lithuanian}}
 * [[Lojban]]: {{t|jbo|ricyratcu|xs=Lojban}}
