--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -28,7 +28,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 *: Old Armenian: {{tø|xcl|սկիւռ|tr=skiwṙ|sc=Armn|xs=Old Armenian}}
 * [[Bashkir]]: {{tø|ba|тейен|tr=teyen|sc=Cyrl|xs=Bashkir}}
 * [[Basque]]: [[katagorri]],  {{t-|eu|urtxintxa|xs=Basque}}
-* Belarusian: {{t|be|звачайная ваверка|f|tr=zvačajnaja vaverka|xs=Belarusian}}, {{t|be|вавёрка|f|tr=vavjórka|sc=Cyrl}}
+* Belarusian: {{t|be|вавёрка|f|tr=vavjórka|sc=Cyrl}}
 * [[Breton]]: {{t|br|gwiñver|m}}, {{t|br|kaz-koad|m}}
 * Bulgarian: {{t+|bg|катерица|f|tr=katerica}}
 * Cantabrian: [[esquilu]] {{m}}
