--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -31,9 +31,10 @@
 #* '''1621''', Robert Burton, ''The Anatomy of Melancholy'', I.2.4.vii:
 #*: Thus men are plagued with women, they '''again''' with men, when they are of diverse humours and conditions [...].
 # Another time; once more. {{defdate|from 14th c.}}
-#: ''I didn't do a very good job the first time, and now I have to do it '''again'''.''
 #* '''1979''', Charles Edward Daniels et al., “The Devil Went Down to Georgia” (song), ''Million Mile Reflections'', Charlie Daniels Band, Epic Records:
-#*: Johnny said, “Devil, just come on back if you ever want to try '''again'''. {{...}}”
+#*: Johnny said, “Devil, just come on back if you ever want to try '''again'''.”
+#*'''2010''', Simon Hattenstone, ''The Guardian'', 30 Oct 2010:
+#*:The last sentence is so shocking, I have to read it '''again'''.
 # Over and above a factor of one. {{defdate|from 16th c.}}
 #* '''1908''' December 10, Austin H. Clark, “New Genera and Species of Crinoids”, ''Proceedings of the Biological Society of Washington'', Volume XXI, [http://books.google.com/books?id=uc7RAAAAMAAJ&pg=PA229&dq=again pages 229-230]:
 #*: Cirri <span style="font-variant:small-caps">l-lxxx</span>, 15, about 12mm. long; first two joints short, about twice as broad as long; third about one-third '''again''' [=one and one-third times] as long as broad; fourth and fifth the longest, about half '''again''' [=one and a half times] as long as broad; {{...}}
