--- a/en/t/termbase.801754.wikitext
+++ b/en/t/termbase.801754.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{translation|software}} A [[database]] of [[terminology]], usually in a [[multilingual]] format.
+# {{translation studies|software}} A [[database]] of [[terminology]], usually in a [[multilingual]] format.
 
 ===Anagrams===
 * [[beermats#English|beermats]]
