--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -19,6 +19,15 @@ From {{etyl|fro}} {{term|lang=fro|quadrat||a square}} < {{etyl|la}} {{term|lang=
 # {{astrology}} An aspect of the heavenly bodies in which they are distant from each other 90°, or the quarter of a circle; quartile.
 # {{anatomy}} The quadrate bone. 
 
+===Verb===
+{{en-verb|quadrat|ing}}
+
+# {{archaic|transitive}} To [[adjust]] (a [[gun]]) on its [[carriage]], or train it for [[horizontal]] [[fire|firing]].
+# {{archaic|transitive}} To [[adjust]] (a [[gun]]) on its [[carriage]].
+# {{archaic|ambitransitive}} To [[square]] (in various senses).
+#: '''''quadrating''' the circle''
+#: ''not '''quadrating''' with American ideas of right, justice and reason''
+
 ===External links===
 * {{R:Webster 1913}}
 * {{R:Century 1911}}
