--- a/en/m/mouthwateringly.720182.wikitext
+++ b/en/m/mouthwateringly.720182.wikitext
@@ -1,6 +1,9 @@
 ==English==
 
+===Etymology===
+{{suffix|mouthwatering|ly}}
+
 ===Adverb===
 {{en-adv}}
 
-# In a [[mouthwatering]] manner
+# In a [[mouthwatering]] manner.
