en-noun <tongue clacking#13557781>

--- a/en/t/tongue clacking.775404.wikitext
+++ b/en/t/tongue clacking.775404.wikitext
@@ -1,10 +1,10 @@
 ==English==
 
 ===Noun===
-'''[[tongue]] [[clack]]ing'''
+{{en-noun|-|head=[[tongue]] [[clack]]ing}}
 
 # {{obsolete|pejorative}} The act of [[talk]]ing incessantly with little or no meaning.
 
-===Related terms===
-*[[clacker]]
-*[[tongue clacker]]
+====Related terms====
+* [[clacker]]
+* [[tongue clacker]]
