--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -11,6 +11,7 @@
 * Italian: {{t-|it|nordafricano}}
 {{trans-mid}}
 * Polish: [[północnoafrykański]] {{m}}
+* Romanian: {{t|ro|nord-african}}
 {{trans-bottom}}
 
 ===Noun===
