--- a/en/b/blew.6804.wikitext
+++ b/en/b/blew.6804.wikitext
@@ -15,6 +15,15 @@
 
 ----
 
+==Cornish==
+
+===Noun===
+{{infl|kw|noun|g=|singulative|blewen}}
+
+# [[hair]]
+
+----
+
 ==Middle English==
 <!--this Middle English entry was created using Template:new enm entry-->
 ===Adjective===
