/* Translations */ +zh <vote with one's feet#13573511>

--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -25,8 +25,9 @@
 {{trans-top|to express one's preferences through one's actions}}
 * {{trreq|ar}}
 * Armenian: {{t|hy|քվեարկել ոտքերով|tr=k’vearkel otk’erov}}
-* {{trreq|ca}}
-* {{trreq|zho}}
+* {{trreq|ca}} 
+* Chinese:
+:* Mandarin: {{t|zh|弃权|sc=Hani}}, {{t|zh|逃避|sc=Hani}}
 * {{trreq|cs}}
 * {{trreq|nl}}
 * Finnish: {{t-|fi|äänestää jaloillaan}}
