t+eo:[[fajfi]] ([[WT:EDIT|Assisted]]) <whistle#13573687>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -162,6 +162,7 @@
 * Czech: {{t-|cs|pískat}}
 * Danish: {{t-|da|fløjte}}, {{t|da|hvisle}}
 * Dutch: {{t+|nl|fluiten}}
+* Esperanto: {{t|eo|fajfi}}
 * Finnish: {{t-|fi|viheltää}}
 * French: {{t+|fr|siffler}}
 * German: {{t+|de|pfeifen}}
