--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -30,7 +30,7 @@ From {{etyl|enm}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang}} 
 * Dutch: {{t+|nl|ja}}, {{t+|nl|jawel}}
 * Finnish: {{t+|fi|joo}}, {{t-|fi|juu}}
 * French: {{t+|fr|ouais}}
-* German: {{t+|de|ja}}, {{t|de|jawohl}}, {{t|de|jawohl}}
+* German: {{t+|de|ja}}, {{t|de|jawohl}}
 * Hindi: [[हाँ]] (hā̃)
 * Hungarian: {{t|hu|igen}}
 * Icelandic: {{t+|is|já}}
