t+kn:[[ದ್ವೀಪ]] ([[WT:EDIT|Assisted]]) <island#13585114>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -119,7 +119,7 @@
 * Italian: {{t+|it|isola|f}}
 * Japanese: {{t+|ja|島|tr=[[しま]], shimá}}
 * [[Kalmyk]]: {{tø|xal|арл|tr=arl|sc=Cyrl}}
-* {{trreq|kn}}
+* [[Kannada]]: {{t|kn|ದ್ವೀಪ|tr=dvīpa|sc=Knda}}
 * [[Karachay-Balkar]]: {{tø|krc|айрымкан|tr=ayrımkan|sc=Cyrl}}, {{qualifier|Balkar}} {{tø|krc|айрыкам|tr=ayrıkam|sc=Cyrl}}
 * Kazakh: {{t-|kk|арал|tr=aral|sc=Cyrl|xs=Kazakh}}, {{t|kk|атау|tr=ataw|sc=Cyrl|xs=Kazakh}}
 * [[Khakas]]: {{tø|kjh|олтырых|tr=oltırıx|sc=Cyrl}}
