--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -47,6 +47,7 @@
 * Indonesian: [[toya]]
 {{trans-mid}}
 * Italian: {{t+|it|bastone|m}}, {{t|it|asta|f}}
+* Latin: {{t|la|baculum}}
 * [[Macedonian]]: {{t-|mk|стап|m|tr=stap}}
 * Polish: {{t+|pl|laska|f}},  {{t+|pl|kij|m}}
 * Portuguese: {{t+|pt|bengala|f}}
