--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -135,19 +135,19 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|有明の月}} ({{l|ja|ありあけのつき}}, [[ariake no tsuki]]): lit. "''[[month]]/[[moon]] of the [[new year]]''"
 * {{l|ja|日進月歩}} ({{l|ja|にっしんげっぽ}}, [[nisshingeppo]]): [[rapid]] [[advance]]
 * {{l|ja|日月}} ({{l|ja|じつげつ}}, jitsugetsu): "''[[life]] & [[livelihood]]''," "''[[sun]] & moon''"
+* {{l|ja|毎月}} ({{l|ja|まいつき}}, [[maitsuki]]): [[every]] [[month]]
+* {{l|ja|月の側暗い}}: lit. the "''[[dark]] [[side]] of the [[moon]]''"
 {{mid3}}
 * {{l|ja|新月}} ({{l|ja|しんげつ}}, [[shingetsu]]): [[new moon]]
 * {{l|ja|月形}} (''tsukigata''; (or {{l|ja|月型}} (''tsukigata'')): a/the [[crescent moon]]
 * {{l|ja|三日月}} (''mikazuki''): a/the [[crescent moon]]
 * {{l|ja|凹月}} ({{l|ja|おうげつ}}, ''ōgetsu''/''āogetsu''): lit. "''[[concave]] moon''" - a [[crescent]] moon
-* {{l|ja|半月}} ({{l|ja|はんつき}}, ''[[hantsuki]]''): lit. [[half moon]]
-* {{l|ja|半月}} ({{l|ja|はんげつ}}, ''[[hangetsu]]''): lit. [[half moon]]
+* {{l|ja|四半月}} ({{l|ja|しはんつき}}, ''[[shihantsuki]]''; or {{l|ja|しはんげつ}}, ''[[shihangetsu]]''): lit. [[quarter moon]]
+* {{l|ja|半月}} ({{l|ja|はんつき}}, ''[[hantsuki]]''; or {{l|ja|はんげつ}}, ''[[hangetsu]]''): lit. [[half moon]]
 * {{l|ja|凸月}} ({{l|ja|とつげつ}}, ''[[totsugetsu]]''): lit. "''[[convex]] moon'';" the [[gibbous moon]]
 * {{l|ja|満月}} ({{l|ja|まんげつ}}, ''[[mangetsu]]''): lit. [[full moon]]
 * {{l|ja|盛月}} or {{l|ja|増月}}: lit. "''[[heightening]]/[[increasing]] moon'';" [[waxing moon]]
 * {{l|ja|衰月}} or {{l|ja|減月}}: lit. "''[[declining]]/[[reducing]] moon'';" [[waning moon]]
-* {{l|ja|毎月}} ({{l|ja|まいつき}}, [[maitsuki]]): [[every]] [[month]]
-* {{l|ja|月の側暗い}}: lit. the "''[[dark]] [[side]] of the [[moon]]''"
 {{bottom}}
 
 ====Derived terms====
