--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -65,6 +65,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 * Japanese: [[賭ける]] ([[かける]], kakeru)
 * [[Macedonian]]: {{t|mk|се коцка|tr=se kócka}}
 * Portuguese: {{t+|pt|arriscar}}
+* [[Walloon]]: {{t|wa|wadjî}}
 {{trans-bottom}}
 
 {{trans-top|to play casino games}}
