--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -124,9 +124,9 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|月賦}} ({{l|ja|げっぷ}}, ''[[geppu]]''): [[monthly]] [[payment]]
 * {{l|ja|月曜}}{{l|ja|、}}{{l|ja|月曜日}} ({{l|ja|げつようび|げつよう(び)}}, [[getsuyōbi|getsuyō(bi)]]): "''[[Mondays]], [[Monday]]''"
 * {{l|ja|月例}} ({{l|ja|げつれい}}, [[getsurei]]): [[monthly]]
-{{mid3}}
-* {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]): lit. "''moon [[age]]'';" the [[phase]](s) of the moon
+* {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]): lit. "''moon [[age]]'';" the [[phase]]s of the moon
 * {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]): [[lunar]] [[era]]
+{{mid3}}
 * {{l|ja|月並み}} ({{l|ja|つきなみ}}, [[tsukinami]]): [[mediocrity]]
 * {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei): lit. a "''[[moon cake]]''"
 * {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu): "''the end of the month''"
@@ -137,6 +137,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|日月}} ({{l|ja|じつげつ}}, jitsugetsu): "''[[life]] & [[livelihood]]''," "''[[sun]] & moon''"
 * {{l|ja|毎月}} ({{l|ja|まいつき}}, [[maitsuki]]): [[every]] [[month]]
 * {{l|ja|月の側暗い}}: lit. the "''[[dark]] [[side]] of the [[moon]]''"
+* {{l|ja|雨月}} (''[[ugetsu]]''): lit. "''[[rain]] [[moon]]''"
 {{mid3}}
 * {{l|ja|新月}} ({{l|ja|しんげつ}}, [[shingetsu]]): [[new moon]]
 * {{l|ja|月形}} (''tsukigata''; (or {{l|ja|月型}} (''tsukigata'')): a/the [[crescent moon]]
@@ -148,6 +149,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|満月}} ({{l|ja|まんげつ}}, ''[[mangetsu]]''): lit. [[full moon]]
 * {{l|ja|盛月}} or {{l|ja|増月}}: lit. "''[[heightening]]/[[increasing]] moon'';" [[waxing moon]]
 * {{l|ja|衰月}} or {{l|ja|減月}}: lit. "''[[declining]]/[[reducing]] moon'';" [[waning moon]]
+* {{l|ja|無月}} (''[[mugetsu]]''): lit. "''[[no]] [[moon]]''"
 {{bottom}}
 
 ====Derived terms====
