--- a/en/g/greenlight.746549.wikitext
+++ b/en/g/greenlight.746549.wikitext
@@ -17,6 +17,7 @@ From {{term|green light}}
 ====Translations====
 {{trans-top|to approve}}
 * Finnish: {{t+|fi|näyttää}} {{t+|fi|vihreä|alt=vihreää}} {{t+|fi|valo|alt=valoa}}
+* Italian: {{t|it|approvare}}, {{t|it|omologare}}
 {{trans-mid}}
 * Portuguese: {{t-|pt|dar o sinal verde}}, {{t+|pt|permitir}}, {{t+|pt|aprovar}}
 {{trans-bottom}}
