--- a/en/o/overline.775476.wikitext
+++ b/en/o/overline.775476.wikitext
@@ -6,15 +6,13 @@
 ===Noun===
 {{en-noun}}
 
-#A [[line]] drawn over text.
+#A [[line]] drawn over text or a [[repeating decimal]].
 #:*{{overline|ΙΣ}} {{overline|ΧΣ}} ''(Greek abbreviation of [[Jesus Christ]])''
-#A [[line]] drawn over a [[repeating decimal]].
 
 ===Verb===
 {{en-verb|overlin|es}}
 
 #To draw a [[line]] over or above text.
-#To draw a [[line]] over a repeating decimal.
 
 [[ta:overline]]
 [[zh:overline]]
