--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -36,7 +36,7 @@
 * Finnish: {{t+|fi|kukkakaali}}
 * French: {{t+|fr|chou-fleur|m}}
 * Georgian: {{t|ka|კალბანი|tr=kalbani|sc=Geor|xs=Georgian}},  {{t|ka|ყვავილოვანი კომბოსტო|tr=qvavilovani kombosto|sc=Geor|xs=Georgian}}
-* German: {{t+|de|Blumenkohl|m}},  ''(Austrian:)'' {{t|de|Karfiol|m}}
+* German: {{t+|de|Blumenkohl|m}},  {{qualifier|Austria}} {{t|de|Karfiol|m}}
 * Greek: {{t+|el|κουνουπίδι|n|tr=kunupídi}}
 * [[Greenlandic]]: {{t|kl|blomkåli}}
 * Hungarian: {{t+|hu|karfiol}}
