--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -99,9 +99,8 @@ From {{etyl|enm}} {{term|rotten|lang=enm}}, {{term|roten|lang=enm}}, from {{etyl
 # {{military|lang=nl}} a [[file]] (of men)
 
 ====Derived terms====
-* [[een oude rot]] ''an old hand''
-* [[rot op]] ''a not so friendly way to say ''go away'' (i.e.: fuck off)''
-* [[rot-]] ''noun prefix to give it a negative meaning. For example: ''rot[[weer]]'' = ''shitty weather'', ''die rot[[hond]]'' = ''that damn [[dog]]''''
+* [[een oude rot]]
+* [[rot op]]
 
 ===Verb===
 '''rot'''
