+rhyme [[Rhymes:Dutch:-aː|-aː]] <qua#13622798>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -61,6 +61,7 @@ From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.
 ==Dutch==
 
 ===Pronunciation===
+* {{rhymes|aː|lang=nl}}
 * {{audio|Nl-qua.ogg|audio}}
 
 ===Adverb===
