t+az:[[dəyirman]] t+tr:[[değirmen]] ([[WT:EDIT|Assisted]]) <mill#13626757>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -87,6 +87,7 @@
 {{trans-bottom}}
 
 {{trans-top|building housing a grinding apparatus}}
+* [[Azeri]]: {{t|az|dəyirman}}
 * [[Catalan]]: {{t|ca|molí|m}}
 * Esperanto: {{t|eo|muelejo}}
 * Finnish: {{t+|fi|mylly}}
@@ -96,6 +97,7 @@
 * Latvian: {{t|lv|maltuve}}
 * Portuguese: {{t|pt|moinho|m}}
 * [[Scottish Gaelic]]: {{t-|gd|muileann|m|f|xs=Scottish Gaelic}}
+* Turkish: {{t|tr|değirmen}}
 {{trans-bottom}}
 
 {{trans-top|manufacturing plant}}
