--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -39,13 +39,14 @@
 * [[Chamicuro]]: {{tø|ccc|chaskolo}}
 * Czech: {{t+|cs|hůl|f}}
 * Dutch: {{t+|nl|staf|c}}
+* Esperanto: {{t|eo|bastono}}
 * Finnish: {{t+|fi|sauva}}, {{t-|fi|salko}}
 * French: {{t+|fr|staff|m}}, {{t+|fr|canne|f}}
 * German: {{t+|de|Stab|m}}
 * Hebrew: {{t-|he|מקל|m|alt=מַקֵּל}}
 * [[Ido]]: [[bastono]]
-* Indonesian: [[toya]]
 {{trans-mid}}
+* Indonesian: [[toya]]
 * Italian: {{t+|it|bastone|m}}, {{t|it|asta|f}}
 * [[Macedonian]]: {{t-|mk|стап|m|tr=stap}}
 * Polish: {{t+|pl|laska|f}}, {{t+|pl|kij|m}}
