--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm}} {{term|rotten|lang=enm}}, {{term|roten|lang=enm}}, from {{etyl
 ==Dutch==
 
 ===Pronunciation===
+* {{rhymes|ɔt|lang=nl}}
 * {{audio|Nl-rot.ogg|Audio}}
 
 ===Adjective===
