/* Etymology */ tr= <thing#13633165>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -3,9 +3,9 @@
 {{wikipedia|dab=thing}}
 
 ===Etymology===
-From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang}}.
+From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}.
 
-From {{proto|Germanic|þingan}}; compare German {{term|Ding|lang=de}}, Danish and Norwegian {{term|ting}}.
+From {{proto|Germanic|þingan||tr=thingan}}; compare German {{term|Ding|lang=de}}, Danish and Norwegian {{term|ting}}.
 
 Originally meaning an assembly, that handled political and court issues. Later an issue at that assembly was called a “thing”, leading to today's meaning “an object”. Compare Latin [[res]], also meaning legal matter.
 
