--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -202,6 +202,9 @@ From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt
 
 ==Dutch==
 
+===Pronunciation===
+* {{rhymes|ɑt|lang=nl}}
+
 ===Verb===
 {{infl|nl}}
 
