rather than sync translations at [[Thing]] and [[thing]], use trans-see to point to [[Thing]] <thing#13637893>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -219,12 +219,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{p
 * [[West Frisian]]: [[ding]] {{n}}
 {{trans-bottom}}
 
-{{trans-top|a legislative or judicial assembly}}
-* German: {{t-|de|Thing|n}}
-* Norwegian: {{t+|no|ting|n}}
-{{trans-mid}}
-* Swedish: {{t+|sv|ting|n}}
-{{trans-bottom}}
+{{trans-see|an assembly|Thing}}
 
 {{checktrans-top}}
 * {{ttbc|si}}: [[දෙය]] (deya)
