adding sort to {{sh-suffix}} using [[Project:AWB|AWB]] <-ica#13643321>

--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -55,7 +55,7 @@ Not productive, and rarely used; {{term|-ana}} and {{term|-ia}} are more common.
 ===Etymology 1===
 
 ====Suffix====
-{{sh-suffix|r|-ица}}
+{{sh-suffix|r|-ица|sort=ica}}
 
 # Suffix appended to words to create a feminine noun, commonly used for forming [[diminutives]].
 # Suffix appended to words to create a masculine or feminine noun, usually a [[pejorative]].
@@ -64,7 +64,7 @@ Not productive, and rarely used; {{term|-ana}} and {{term|-ia}} are more common.
 {{suffix|-ik|a|lang=sh}}
 
 ====Suffix====
-{{sh-suffix|r|-ица}}
+{{sh-suffix|r|-ица|sort=ica}}
 
 # Feminine form of {{l|sh|-ik}}.
 
