t+no:[[bruke opp]] ([[WT:EDIT|Assisted]]) <consume#13656053>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -47,7 +47,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Hungarian: {{t+|hu|fogyaszt}}
 * Irish: {{t-|ga|caith|xs=Irish}}
 * Italian: {{t+|it|consumare}}
-* Norwegian: {{t|no|forbruke}}
+* Norwegian: {{t|no|forbruke}}, {{t|no|bruke opp}}
 * Persian: {{t|fa|مصرف کردن|sc=fa-Arab}}
 * Romanian: {{t-|ro|consuma}}
 * Vietnamese: {{t|vi|dùng}}, {{t|vi|tiêu thụ}}
