--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -21,13 +21,15 @@ Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|
 ====Verb====
 {{en-verb|cop|p|ing}}
 
-# {{transitive|formerly|_|dialect|now|_|informal}} To [[capture]], get hold of, [[take]].
+# {{transitive|formerly|_|dialect|now|_|informal}} to [[capture]], get hold of, [[take]]
 #* '''2005,''' Martin Torgoff, ''Can't Find My Way Home'', Simon &amp; Schuster, page 10,
 #*: Heroin appeared on the streets of our town for the first time, and Innie watched helplessly as his sixteen-year-old brother began taking the train to Harlem to '''cop''' smack.
-# {{transitive}} To [[steal]].
-# {{transitive}} To [[adopt]].
+# {{transitiv}} to [[take]]; to [[receive]]; to [[shoulder]]; to [[bear]]
+#*: when caught, he would often cop a vicious blow from his father
+# {{transitive}} to [[steal]]
+# {{transitive}} to [[adopt]]
 #: ''No need to '''cop''' an attitude with me, junior.''
-# {{intransitive|usually with "to"}} To [[admit]].
+# {{intransitive|usually with "to"}} to [[admit]]
 #: ''Harold '''copped''' to being known as "Dirty Harry".''
 #* {{quote-book|title=Mr. Paradise|page=295|author=Elmore Leonard|year=2005|passage=He shot a guy in a bar on Martin Luther King Day and '''copped''' to first-degree manslaughter}}
 
