--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -24,8 +24,8 @@ Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|
 # {{transitive|formerly|_|dialect|now|_|informal}} to [[capture]], get hold of, [[take]]
 #* '''2005,''' Martin Torgoff, ''Can't Find My Way Home'', Simon &amp; Schuster, page 10,
 #*: Heroin appeared on the streets of our town for the first time, and Innie watched helplessly as his sixteen-year-old brother began taking the train to Harlem to '''cop''' smack.
-# {{transitiv}} to [[take]]; to [[receive]]; to [[shoulder]]; to [[bear]]
-#*: when caught, he would often cop a vicious blow from his father
+# {{transitive}} to [[take]]; to [[receive]]; to [[shoulder]]; to [[bear]]
+#*: When caught, he would often '''cop''' a vicious blow from his father
 # {{transitive}} to [[steal]]
 # {{transitive}} to [[adopt]]
 #: ''No need to '''cop''' an attitude with me, junior.''
