as in "euhhhhhhhhhh" <yeah#13671700>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -89,6 +89,7 @@ From {{etyl|enm}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang}} 
 
 ====Translations====
 {{trans-top|expressing joy}}
+* Dutch: [[euh]]
 * Finnish: {{t-|fi|jee}}
 {{trans-mid}}
 * Japanese: {{t|ja|やった}} (yatta)
