--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -16,6 +16,7 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 
 =====Translations=====
 {{trans-top|sound made by a duck}}
+* Danish: {{t|da|rap|n}}
 * Dutch: {{t+|nl|kwak}}
 * Estonian: {{t+|et|prääks}}
 * Faroese: {{t|fo|gvagg}}, {{t|fo|kvagg}}
