t+my:[[မှုတ်]] ([[WT:EDIT|Assisted]]) <blow#13678720>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -89,6 +89,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Arabic: {{t|ar|نفخ|tr=nafakha}}
 * Armenian: {{t-|hy|փչել|tr=p'čel}}
 * Bulgarian: {{t|bg|духам}}, {{t|bg|вея}}
+* Burmese: {{t|my|မှုတ်|tr=hmok|sc=Mymr}}
 * [[Catalan]]: {{t+|ca|bufar}}
 * Chinese: {{t-|cmn|吹|tr=chuī|sc=Hani}}, {{zh-tsp|颳|刮|guā}}
 * Czech: {{t+|cs|vát}}, {{t-|cs|vanout}}, {{t-|cs|foukat}}
