--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -15,10 +15,12 @@
 * Finnish: {{t+|fi|metallurgi}}
 {{trans-mid}}
 * German: {{t|de|Metallurg|m}}, {{t|de|Metallurge|m}}, {{t|de|Metallurgin|f}}
-* Russian: {{t+|ru|металлург|m|tr=metallurg}}
+* Russian: {{t+|ru|металлург|m|tr=metallúrg}}
 * Spanish: {{t-|es|metalúrgico|m|f}}, {{t-|es|metalurgista|m}}
 * [[Volapük]]: {{qualifier|epicene}} {{t|vo|metalavan}}, {{qualifier|male}} {{t|vo|himetalavan}}, {{qualifier|female}} {{t|vo|jimetalavan}}, {{qualifier|collective, epicene}} {{t|vo|metalavanef}}
 {{trans-bottom}}
+
+[[Category:en:Occupations]]
 
 [[es:metallurgist]]
 [[pl:metallurgist]]
