--- a/en/n/nooner.802769.wikitext
+++ b/en/n/nooner.802769.wikitext
@@ -13,7 +13,7 @@
 #*'''2006''', "[http://www.foxnews.com/story/0,2933,215178,00.html Funnyman Dennis Miller Returns to FNC!]," ''FOX News'', 22 Sep.:
 #*:If you're going to knock off a '''nooner''' with a co-worker at a bad motel you have to scrawl your worn Hancock on the desk blotter.
 
-===See also===
+====Hypernyms====
 *[[quickie]]
 
 ===References===
