--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -47,7 +47,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 * Slovene: [[zapriseči]], [[zavezati se]], [[zaobljubiti se]]
 * Spanish: {{t+|es|prometer}}
 * {{trreq|th}}
-Vietnamese: {{t|vi|cam kết}}
+Vietnamese: {{t|vi|cam kết}}, {{t|vi|thề}}
 {{trans-bottom}}
 
 {{trans-top|to deposit something as a security; to pawn}}
