--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -16,7 +16,6 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 # To [[deposit]] something as a [[security]]; to [[pawn]].
 
 ====Translations====
-{{rfc-tsort|unknown line format: Vietnamese:  t vi cam kết ,  t vi thề }}
 {{trans-top|to make a solemn promise}}
 * Arabic: {{rfc-tbot}}{{t|ar|تعهد|sha|alt=تَعَه{{ar-dia|tr=ta3ahhada}}دَ|sc=Arab}}
 * Chinese:
@@ -48,7 +47,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 * Slovene: [[zapriseči]], [[zavezati se]], [[zaobljubiti se]]
 * Spanish: {{t+|es|prometer}}
 * {{trreq|th}}
-Vietnamese: {{t|vi|cam kết}}, {{t|vi|thề}}
+* Vietnamese: {{t|vi|cam kết}}, {{t|vi|thề}}
 {{trans-bottom}}
 
 {{trans-top|to deposit something as a security; to pawn}}
