--- a/en/j/Jacobin.855478.wikitext
+++ b/en/j/Jacobin.855478.wikitext
@@ -11,7 +11,7 @@
 
 ===References===
 *Collins Shorter English Dictionary
-*Napolean - a biography by Frank McLynn Pages 209-10, 212, 213, 220,221,222,224,233,
+*Napoleon - a biography by Frank McLynn Pages 209-10, 212, 213, 220,221,222,224,233,
 
 [[et:Jacobin]]
 [[fr:Jacobin]]
