/* English */ move “also” to “hypo”, add more <leather#13708962>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -18,6 +18,18 @@
 # {{baseball}} A good defensive play
 #: ''Jones showed good '''leather''' to snare that [[liner]].''
 
+====Hyponyms====
+{{sense|types of leather}}
+* [[chagrin]]
+* [[cordovan]]
+* [[cordwain]]
+* [[galuchat]]
+* [[maroquin]]
+* [[morocco]]
+* [[morocco leather]]
+* [[shagreen]]
+* [[sharkskin]]
+
 ====Translations====
 {{trans-top|material produced by tanning animal skin}}
 * Albanian: {{t-|sq|lëkurë|xs=Albanian}}
@@ -95,12 +107,6 @@
 {{trans-top|baseball: good defensive play}}
 {{trans-mid}}
 {{trans-bottom}}
-
-====See also====
-* [[cordovan]]
-* [[cordwain]]
-* [[morocco]]
-* [[shagreen]]
 
 ===Adjective===
 {{en-adj|-|-}}
