split etymologies; expand and cleanup format <genet#13712458>

--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -1,20 +1,37 @@
-[[File:Genetta genetta felina (Wroclaw zoo).JPG|thumb|right|Common Genet]]
 {{also|genêt}}
 ==English==
-
-===Etymology===
-From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenette}} et al., of uncertain origin.
+{{wikipedia}}
+[[File:Genetta genetta felina (Wroclaw zoo).JPG|thumb|right|Common Genet]]
 
 ===Pronunciation===
-* {{rhymes|ɛnɪt}}
 * {{a|UK}} {{IPA|/ˈdʒɛnɪt/}}
+* {{rhymes|ɛnɪt}}
 
-===Noun===
+===Etymology 1===
+From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenette}} et al., of uncertain origin.
+
+====Noun====
 {{en-noun}}
-{{wikipedia}}
 
 # Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the family ''[[Viverridae]]'', that have a spotted coat and a long, ringed tail
-# A group of [[genetic]]ally identical individuals ([[plant]]s, [[fungi]], [[bacteria]] etc.) that have grown in a given location, all originating from [[asexual reproduction]] of a single ancestor.
+
+=====Translations=====
+{{trans-top|Old World nocturnal mammal of the family Viverridae}}
+{{trans-mid}}
+{{trans-bottom}}
+
+===Etymology 2===
+Coined in the 20th century from {{term|gene}}.
+
+====Noun====
+{{en-noun}}
+
+# {{biology}} A group of [[genetic]]ally identical individuals ([[plant]]s, [[fungi]], [[bacteria]] etc.) that have grown in a given location, all originating from [[asexual reproduction]] of a single ancestor.
+
+=====Translations=====
+{{trans-top|(biology) group of genetically identical individuals}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Anagrams===
 * [[tenge#English|tenge]]
