--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -13,7 +13,7 @@
 {{trans-mid}}
 * [[Macedonian]]: {{t-|mk|коза|f|tr=koza}}
 * [[Old Church Slavonic]]: {{tø|cu|коза|f|tr=koza|sc=Cyrl|xs=Old Church Slavonic}}
-* [[Volapük]]: {{t|vo|jikapar}}, {{qualifier|♂♀}} {{t|vo|kapar}}, {{qualifier|♂}} {{t|vo|hikapar}}
+* [[Volapük]]: {{qualifier|♂♀}} {{t|vo|kapar}}, {{qualifier|♂}} {{t|vo|hikapar}}, {{qualifier|♀}} {{t|vo|jikapar}}
 {{trans-bottom}}
 
 ===Anagrams===
