--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -96,6 +96,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * Italian: {{t+|it|specie|f}}
 * Japanese: {{t+|ja|種|tr=shu}} ([[しゅ]])(''academic''), {{t+|ja|類|tr=rui}} ([[るい]]), {{t+|ja|種類|tr=shurui}} ([[しゅるい]]){{qualifier|colloquial}}
 {{trans-mid}}
+* [[Khmer]]: {{t|km|ប្រភេទ|tr=bro phet|sc=Khmr}}
 * [[Macedonian]]: {{t-|mk|вид|m|tr=vid}}
 * Polish: {{t+|pl|gatunek|m}}
 * Russian: {{t+|ru|вид|tr=vid}}
