--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -22,7 +22,7 @@ http://www.wto.org/
 * [[OTW#English|OTW]]
 * [[owt#English|owt]]
 * [[tow#English|tow]]
-* [[two#English|two]], [[Two#English|Two]]
+* [[two#English|two]]
 * [[wot#English|wot]]
 
 ----
