--- a/en/c/CFC.26242.wikitext
+++ b/en/c/CFC.26242.wikitext
@@ -6,6 +6,7 @@
 # {{organic chemistry}} [[chlorofluorocarbon]]
 # {{US}} Combined Federal Campaign
 # {{soccer}} Chelsea Football Club
+# {{business}} Controlled Foreign [[corporation|Corporation]]
 
 ===Anagrams===
 * [[ccf#English|ccf]] , [[Ccf#English|Ccf]], [[CCF#English|CCF]]
