--- a/en/m/microbicide.720184.wikitext
+++ b/en/m/microbicide.720184.wikitext
@@ -6,8 +6,10 @@
 
 # Any substance that is harmful to [[microorganism]]s
 
-====Derived terms====
+====Related terms====
 * [[microbe]]
+
+====Derived terms====
 * [[microbicidal]]
 
 ====Translations====
