--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -13,6 +13,7 @@
 ====Translations====
 {{trans-top|an ermine}}
 * German: {{t|de|Hermelin|n}}
+* Hungarian: {{t|hu|hermelin}}
 * Polish: {{t|pl|gronostaj}}
 {{trans-mid}}
 * [[Volapük]]: {{qualifier|male or female}} {{t|vo|härmin}}
