--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -164,7 +164,7 @@ See [[bind]]
 * French: {{t+|fr|bond|f}}, {{t+|fr|saut|m}}
 {{trans-mid}}
 * German: {{t+|de|Sprung|m}}
-* Italian: {{t+|it|salto|m}}, {{t-|it|balzo|m}}, {{t|it|balzo|m}}
+* Italian: {{t+|it|salto|m}}, {{t-|it|balzo|m}}
 * [[Scottish Gaelic]]: {{t-|gd|leum|m|xs=Scottish Gaelic}}
 * Swedish: {{t+|sv|hopp|n}}, {{t|sv|skutt|n}}
 {{trans-bottom}}
