t+ht:[[zil]] ([[WT:EDIT|Assisted]]) <island#13747204>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -107,7 +107,7 @@
 *: Ancient: {{tø|grc|νῆσος|f|tr=nē̂sos|sc=polytonic|xs=Ancient Greek}}
 *: Modern: {{qualifier|formal}} {{t+|el|νήσος|f|tr=nísos}}, {{t+|el|νησί|n|tr=nisí}}
 * [[Gujarati]]: [[દ્વીપ]]
-* [[Haitian Creole]]: {{tø|ht|zile|xs=Haitian Creole}}
+* [[Haitian Creole]]: {{tø|ht|zile|xs=Haitian Creole}}, {{tø|ht|zil}}
 * Hebrew: {{t+|he|אי|m|alt=אִי|tr=i}}
 * Hindi: {{t|hi|द्वीप|m|tr=dvīp|sc=Deva}}, {{t|hi|टापू|m|tr=ṭāpū|sc=Deva}}
 * Hungarian: {{t+|hu|sziget}}
