added "maximum break" to derived terms, alpha sort <maximum#13748731>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -78,10 +78,11 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 {{trans-bottom}}
 
 ===Derived terms===
-* [[local maximum]]
 * [[global maximum]]
+* [[local maximum]]
 * [[maximal]]
 * [[maximize]]
+* [[maximum break]]
 * [[maximum limit]]
 * [[submaximum]]
 
