--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -31,9 +31,10 @@ From {{etyl|ang}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{etyl|
 * Bulgarian: {{t+|bg|заповядвам}}
 * Czech: {{t-|cs|žádat}}
 * Dutch: {{t+|nl|zeggen}}, {{t+|nl|vertellen}}
-{{trans-mid}}
 * Finnish: {{t+|fi|pyytää}}, {{t+|fi|käskeä}}
+{{trans-mid}}
 * Hungarian: {{t|hu|megparancsol}}, {{t|hu|elrendel}}
+* Portuguese: {{t|pt|mandar}}, {{t|pt|ordenar}}
 * Russian: {{t+|ru|приказывать}}
 {{trans-bottom}}
 
