--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -63,7 +63,7 @@
 * Bengali: {{t-|bn|আবার|tr=abar|sc=Beng|xs=Bengali}}
 * [[Breton]]: [[adarre]]
 * Bulgarian: [[отново]] (otnovo), [[пак]] (pak), {{t|bg|отново|tr=otnovo|sc=Cyrl}}, {{t|bg|пак|tr=pak|sc=Cyrl}}
-* Burmese: {{t|my|နောက်တဖန်|sc=Mymr|xs=Burmese}}
+* Burmese: {{t|my|နောက်တဖန်|sc=Mymr|tr=nauktăpan|xs=Burmese}}
 * [[Catalan]]: {{t|ca|una altra vegada}}, {{t|ca|de nou}}
 * Chinese:
 *: Mandarin: {{qualifier|of future events}} {{t-|cmn|再|tr=zài|sc=Hani}}, {{qualifier|of past events}} {{t-|cmn|又|tr=yòu|sc=Hani}}, {{qualifier|once again}} {{t-|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn|sc=Hani}}, {{t-|cmn|重新|tr=chóngxīn|sc=Hani}}
