--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -39,7 +39,7 @@
 * French: [[ajustement]] {{m}}, [[arèglement]] {{m}}
 * German: {{t+|de|Anpassung|f}}
 * Greek: [[διευθέτηση]] (diefθétisi) {{f}}, [[ρύθμιση]] (ríiθmisi) {{f}}, [[προσαρμογή]] (prosarmogí) {{f}}, [[διαβάθμηση]] (diaváθmisi) {{f}}
-* {{trreq|Guarani}}
+* {{trreq|gn}}
 * Hebrew: {{t+|he|כוון|m|alt=כִּוּוּן}}
 * Hungarian: {{t|hu|beállítás}}
 {{trans-mid}}
