t+ro:[[înmulțire]] ([[WT:EDIT|Assisted]]) <multiplication#13781565>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -36,7 +36,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * [[Manx]]: {{t|gv|yl-raghey|m}}
 * Persian: {{t+|fa|ضرب|xs=Persian}}
 * Polish: {{t+|pl|mnożenie|n}}
-* Romanian: {{t|ro|multiplicare|f}}
+* Romanian: {{t|ro|multiplicare|f}}, {{t|ro|înmulțire}}
 * Russian: {{t+|ru|умножение|n|tr=umnožénije}}
 * Spanish: {{t+|es|multiplicación|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
