t+lb:[[Päif]] ([[WT:EDIT|Assisted]]) <whistle#13786790>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -56,6 +56,7 @@
 * Italian: {{t-|it|fischietto|m}}
 * Japanese: {{t+|ja|笛|tr=[[ふえ]], fue}}, {{t|ja|ホイッスル|tr=hoissuru}}, {{t-|ja|口笛|tr=くちぶえ, kuchibue}}
 * Latvian: {{t|lv|svilpe|f}}
+* [[Luxembourgish]]: {{t|lb|Päif|f}}
 * [[Meru]]: {{tø|mer|thirimbi}}
 * Polish: {{t|pl|gwizdek|m}}
 * Portuguese: {{t-|pt|apito|m}}
