--- a/en/h/helping hand.803463.wikitext
+++ b/en/h/helping hand.803463.wikitext
@@ -7,7 +7,11 @@
 #:''Thanks for lending a '''helping hand''' to the project.''
 
 ====Translations====
-*French: {{t+|fr|coup de pouce|m}}, {{t+|fr|coup de main|m}}
+{{trans-top|any assistance, help or aid}}
+* French: {{t+|fr|coup de pouce|m}}, {{t+|fr|coup de main|m}}
+{{trans-mid}}
+* Icelandic: {{t|is|hjálparhönd|f}}, {{qualifier|lend a helping hand}} {{t|is|rétta hjálparhönd}}, {{qualifier|give a helping hand}} {{t|is|leggja hönd á plóg}}, {{t|is|leggja hönd á plóg}}
+{{trans-bottom}}
 
 [[et:helping hand]]
 [[fr:helping hand]]
