t+de:[[Hermelin]] ([[WT:EDIT|Assisted]]) <ermine#13813448>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -89,6 +89,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Finnish: [[kärpännahka]], [[hermeliini]]
 {{trans-mid}}
 * French: {{t+|fr|hermine|f}}
+* German: {{t|de|Hermelin|m}}
 * [[Volapük]]: {{t|vo|härminaskin}}, {{t|vo|härminapläd}}, {{t|vo|visafot}}
 {{trans-bottom}}
 
@@ -104,6 +105,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Finnish: {{t-|fi|kärpännahka}}
 * French: {{t+|fr|hermine|f}}
 {{trans-mid}}
+* German: {{t|de|Hermelin}}
 * [[Macedonian]]: {{t|mk|хермелин|m|tr=hermelín}}
 {{trans-bottom}}
 
