--- a/en/m/multi-billion.34077.wikitext
+++ b/en/m/multi-billion.34077.wikitext
@@ -1,18 +1,17 @@
 ==English==
 
-===Pronunciation===
-'''mul*ti-bil*li-on'''
-MOHL-tee-BIL-li-uhn
-
 ===Etymology===
 {{prefix|multi|billion}}
 
 ===Adjective===
-{{infl|en|adjective}}
+{{en-adjective|-}}
 
 # Having more than 1,000,000,000; in the billion range.
-# ''In the old numbering system (mainly British)'', more than 1,000,000,000,000; in the old billion range.
+# {{context|in the old numbering system|chiefly|British}}, more than 1,000,000,000,000; in the old billion range.
 
 ====Translations====
+{{trans-top|having more than 1,000,000,000}}
 * French: {{t-|fr|multi-billion}}
-* Italian: [[multi-billione]]
+{{trans-mid}}
+* Italian: {{t|it|multi-billione}}
+{{trans-bottom}}
