t+nl:[[wegen]] ([[WT:EDIT|Assisted]]) <weight#13874150>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -204,6 +204,7 @@
 {{trans-bottom}}
 
 {{trans-top|in mathematics}}
+* Dutch: {{t|nl|wegen}}
 * French: {{t+|fr|pondérer}}
 * German: {{t-|de|gewichten}}
 * Italian: {{t+|it|ponderare}}
