--- a/en/k/knee-high to a grasshopper.742286.wikitext
+++ b/en/k/knee-high to a grasshopper.742286.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|short}}
+* {{trreq|Finnish}}
 * French: {{t|fr|haut comme trois pommes}}
 * German: {{t|de|drei Käse hoch}}
 {{trans-mid}}
