--- a/en/f/formal grammar.775171.wikitext
+++ b/en/f/formal grammar.775171.wikitext
@@ -6,6 +6,9 @@
 
 # {{computer science}} A precise [[mathematical]] description of a [[formal language]], consisting of terminal symbols, nonterminal symbols, a nonterminal symbol serving as start symbol, and a set of [[formation rule|production rules]] that control the expansion of nonterminal symbols into strings consisting of both terminal and nonterminal symbols.
 
+====Meronyms====
+* [[formation rule]]s
+
 ====Related terms====
 * [[generative grammar]]
 * [[analytic grammar]]
