/* Noun */ tp <theory#13879321>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -20,7 +20,7 @@ English since 1613, from {{etyl|fr}} {{term|lang=fr|théorie}} < {{etyl|la}} {{t
 #: ''The '''theory''' of relativity was proposed by Einstein.''
 # {{uncountable}} {{mathematics}} A [[field]] of [[study]] attempting to [[exhaustive]]ly [[describe]] a particular [[class]] of [[construct]]s. <!-- Not quite broad enough to include "music theory". Where do we put that? -->
 #: ''Knot '''theory''' classifies the mappings of a circle into 3-space.''
-# {{countable}} {{logic}} A [[set]] of [[axiom]]s together with all [[statement]]s [[derivable]] from them.  ''Equivalently,'' a [[formal language]] plus a set of [[axiom]]s (from which can the be derived [[theorem]]s).
+# {{countable}} {{logic}} A [[set]] of [[axiom]]s together with all [[statement]]s [[derivable]] from them.  ''Equivalently,'' a [[formal language]] plus a set of [[axiom]]s (from which can then be derived [[theorem]]s).
 #: ''A '''theory''' is consistent if it has a model.''
 
 ====Usage notes====
