--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -16,7 +16,7 @@
 {{en-noun|sg=sir or Sir|s}}
 
 # A man of a higher [[rank]] or [[position]].
-# An address to a military [[superior]].
+# An address to a military [[superior]] of either sex.
 #: ''Yes '''sir'''.''
 # An address to any [[male]], especially if his [[name]] or proper [[address]] is unknown.
 #: ''Excuse me, '''sir''', could you tell me where the nearest bookstore is?''
