--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -48,7 +48,7 @@
 {{trans-mid}}
 * Indonesian: [[toya]]
 * Italian: {{t+|it|bastone|m}}, {{t|it|asta|f}}
-* Latin: {{t|la|baculum}}
+* Latin: {{t|la|baculum}}, {{t|la|virga}}
 * [[Macedonian]]: {{t-|mk|стап|m|tr=stap}}
 * Polish: {{t+|pl|laska|f}}, {{t+|pl|kij|m}}
 * Portuguese: {{t+|pt|bengala|f}}
