Reverted edits by [[Special:Contributions/186.214.151.135|186.214.151.135]] ([[User_talk:186.214.151.135|Talk]]); changed back to last version by [[User:186.213.194.101|186.213.194.101]] <staff#13886547>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -48,7 +48,7 @@
 {{trans-mid}}
 * Indonesian: [[toya]]
 * Italian: {{t+|it|bastone|m}}, {{t|it|asta|f}}
-* Latin: {{t|la|baculum}}, {{t|la|virga}}
+* Latin: {{t|la|baculum}}
 * [[Macedonian]]: {{t-|mk|стап|m|tr=stap}}
 * Polish: {{t+|pl|laska|f}}, {{t+|pl|kij|m}}
 * Portuguese: {{t+|pt|bengala|f}}
