t+bn:[[ভদকা]] t-balance ([[WT:EDIT|Assisted]]) <vodka#13904176>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -25,6 +25,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * [[Azeri]]: {{t-|az|araq|xs=Azeri}}
 * [[Basque]]: vodka
 * Belarusian: {{t|be|гарэлка|f|tr=harélka|xs=Belarusian}}, {{t-|be|водка|f|tr=vódka|xs=Belarusian}}
+* Bengali: {{t|bn|ভদকা|tr=vôdka|sc=Beng}}
 * Bosnian: {{t-|bs|votka|f}}
 * Bulgarian: {{t-|bg|водка|f|tr=vódka}}
 * [[Catalan]]: vodka {{f}}
@@ -45,8 +46,8 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
-* Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 {{trans-mid}}
+* Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 * [[Kölsch]]: {{tø|ksh|wodka}}
 * [[Latgalian]]: {{tø|ltg|braņdīņs}}
 * Latin: {{t-|la|vodca}}
