--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -61,10 +61,9 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Romanian: {{t+|ro|vodcă|f}}
 * Russian: {{t+|ru|водка|f|tr=vódka}}
 * [[Samogitian]]: {{tø|sgs|arielka|f}}, {{tø|sgs|degtėnė|f}}
-* Serbian:
-*: Cyrillic: [[вотка#Serbian|вотка]] {{f}}
-*: Roman: [[votka#Serbian|votka]] {{f}}
-* Serbo-Croatian: {{t|sh|votka|xs=Serbo-Croatian}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|вотка|f|sc=Cyrl|xs=Serbo-Croatian}}
+*: Roman: {{t|sh|votka|f|xs=Serbo-Croatian}}
 * Slovak: {{t-|sk|vodka|f}}
 * Spanish: {{t-|es|vodka|f}}
 * Swahili: {{t-|sw|vodka|xs=Swahili}}
