--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -42,7 +42,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * German: {{t+|de|Wodka|m}}
 * Greek: {{t+|el|βότκα|f|tr=vótka}}
 * Hebrew: {{t+|he|וודקה|f|alt=ווֹדְקָה|tr=vodka}}
-* Hindi: {{t|hi|वोदका|tr=vodkā|xs=Hindi}}
+* Hindi: {{t|hi|वोदका|tr=vodkā|xs=Hindi}}, {{t|hi|वोडका|tr=voḍkā|sc=Deva}}
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
