--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -42,7 +42,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * German: {{t+|de|Wodka|m}}
 * Greek: {{t+|el|βότκα|f|tr=vótka}}
 * Hebrew: {{t+|he|וודקה|f|alt=ווֹדְקָה|tr=vodka}}
-* Hindi: {{t|hi|वोदका|tr=vodkā|xs=Hindi}}, {{t|hi|वोडका|tr=voḍkā|sc=Deva}}
+* Hindi: {{t|hi|वोदका|f|tr=vodkā|xs=Hindi}}, {{t|hi|वोडका|f|tr=voḍkā|sc=Deva}}
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
@@ -72,7 +72,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Thai: {{t-|th|วอดก้า|tr=waawtgaa}}
 * Turkish: {{t+|tr|votka}}
 * Ukrainian: {{t-|uk|горілка|f|tr=horílka|xs=Ukrainian}}, {{t-|uk|водка|f|tr=vódka|xs=Ukrainian}}
-* Urdu: {{t|ur|ووڈکا|tr=vodkā|sc=ur-Arab}}
+* Urdu: {{t|ur|وودکا|f|tr=vodkā|sc=ur-Arab}}, {{t|ur|ووڈکا|f|tr=voḍkā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|vodka|xs=Vietnamese}}
 * Yiddish: {{t|yi|מאַשקע|sc=Hebr}}
 {{trans-bottom}}
