t+af:[[wodka]] t-balance ([[WT:EDIT|Assisted]]) <vodka#13904220>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -19,6 +19,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 
 ====Translations====
 {{trans-top|clear distilled alcoholic liquor}}
+* [[Afrikaans]]: {{t|af|wodka}}
 * Albanian: {{t-|sq|vodkë|f|xs=Albanian}}
 * Arabic: {{t|ar|فودكا|f|tr=vodka, fūdka}}
 * Armenian: {{t+|hy|օղի|tr=òġi}}, {{qualifier|colloquial}} {{t-|hy|արաղ|tr=araġ}}
@@ -46,8 +47,8 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
-* Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 {{trans-mid}}
+* Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 * [[Kölsch]]: {{tø|ksh|wodka}}
 * [[Latgalian]]: {{tø|ltg|braņdīņs}}
 * Latin: {{t-|la|vodca}}
