t+id:[[vodka]] t+ms:[[vodka]] t+lb:[[wodka]] t+hu:[[vodka]] t+lv:[[šņabis]] t+lt:[[vodka]] t+gu:[[વોડકા]] t-balance ([[WT:EDIT|Assisted]]) <vodka#13904227>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -42,19 +42,24 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Georgian: {{t-|ka|არაყი|tr=araġi|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Wodka|m}}
 * Greek: {{t+|el|βότκα|f|tr=vótka}}
+* [[Gujarati]]: {{t|gu|વોડકા|tr=voḍkā|sc=Gujr}}
 * Hebrew: {{t+|he|וודקה|f|alt=ווֹדְקָה|tr=vodka}}
 * Hindi: {{t|hi|वोदका|f|tr=vodkā|xs=Hindi}}, {{t|hi|वोडका|f|tr=voḍkā|sc=Deva}}
+* Hungarian: {{t|hu|vodka}}
+* Indonesian: {{t|id|vodka}}
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
-* Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 {{trans-mid}}
+* Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 * [[Kölsch]]: {{tø|ksh|wodka}}
 * [[Latgalian]]: {{tø|ltg|braņdīņs}}
 * Latin: {{t-|la|vodca}}
-* Latvian: {{t|lv|degvīns|xs=Latvian}}
-* Lithuanian: {{t-|lt|degtinė|f|xs=Lithuanian}}
+* Latvian: {{t|lv|degvīns|xs=Latvian}}, {{t|lv|šņabis}}
+* Lithuanian: {{t-|lt|degtinė|f|xs=Lithuanian}}, {{t|lt|vodka}}
+* [[Luxembourgish]]: {{t|lb|wodka}}
 * [[Macedonian]]: {{t-|mk|вотка|f|tr=vótka}}
+* Malay: {{t|ms|vodka}}
 * Norwegian: {{t-|no|vodka|c}}
 * Persian: {{t+|fa|ودکا|tr=vodkâ|xs=Persian}}
 * Polish: {{t+|pl|wódka|f}}
