--- a/en/c/count down.856261.wikitext
+++ b/en/c/count down.856261.wikitext
@@ -16,5 +16,7 @@
 ====Translations====
 * Esperanto: {{t-|eo|dekalkuli|xs=Esperanto}}
 
+[[Category:English phrasal verbs]]
+[[Category:English phrasal verbs with particle (down)]]
 [[et:count down]]
 [[fr:count down]]
