/* Related terms */ format <Ισραήλ#13926757>

--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -11,8 +11,8 @@
 # The [[state]] of [[Israel]], both [[ancient]] and [[modern]].
 
 ====Related terms====
-* [[Ισραηλινή]]
-* [[Ισραηλινός]]
+* {{l|el|Ισραηλινή|tr=Israiliní|gloss=Israeli|g=f}}
+* {{l|el|Ισραηλινός|tr=Israilinós|gloss=Israeli|g=m}}
 
 [[Category:el:Countries]]
 
