--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -62,7 +62,7 @@
 * [[Afrikaans]]: [[eiland]]
 * [[Ainu]]: {{tø|ain|モシㇼ|tr=moshir}}
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
-* [[Amharic]]: {{tø|am|ደሴት|tr=däset|sc=Ethi}}
+* [[Amharic]]: {{tø|am|ደሴት|tr=däset|sc=Ethi}}, {{t|am|ደሴት|f|tr=däset|sc=Ethi}}
 * [[Anglo-Norman]]: {{tø|xno|isle|f}}
 * Arabic: {{t|ar|جزيرة|f|tr=jaziira|alt=جَزِيرَة|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz| جزيرة|f|tr=gezira|sc=Arab}}
