t+ti:[[ደሴት]] ([[WT:EDIT|Assisted]]) <island#13937013>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -187,6 +187,7 @@
 * [[Tatar]]: {{t|tt|utraw|xs=Tatar}}
 * [[Telugu]]: [[దీవి]] (dIvi), [[ద్వీపం]] (dveepaM)
 * Thai: {{t-|th|เกาะ|tr=gòr}}
+* [[Tigrinya]]: {{t|ti|ደሴት|f|tr=desie̯tɨ|sc=Ethi}}
 * Turkish: {{t+|tr|ada}}, {{t+|tr|cezire}}
 * [[Turkmen]]: {{t+|tk|ada|xs=Turkmen}}
 * [[Tuvan]]: {{tø|tyv|ортулук|tr=ortuluq|sc=Cyrl}}
