--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -87,7 +87,9 @@
 *: Mandarin: {{t|zh|島|sc=Hani}}, {{t|zh|岛|tr=dǎo|sc=Hani}}, {{t|zh|島嶼|sc=Hani}}, {{t|zh|岛屿|tr=dǎoyǔ|sc=Hani}}
 *: Min Nan: {{tø|nan|島嶼|tó-sū|sc=Hans}}, {{tø|nan|島|tr=tó, tóo|sc=Hans}}
 * [[Chuvash]]: {{tø|cv|утрав|tr=utrav|sc=Cyrl}}
-* [[Coptic]]: {{tø|cop|b}}
+* Coptic:
+*: Bohairic: {{tø|cop|ⲙⲟⲩⲓ|f|tr=mwi}}, {{tø|cop|ⲛⲏⲥⲟⲥ|f|tr=nisos}}
+*: Sahidic: {{tø|cop|ⲙⲟⲩⲉ|f|tr=mwe}}, {{tø|cop|ⲛⲏⲥⲟⲥ|m|tr=nisos}}
 * [[Corsican]]: [[isula]] {{f}}
 * [[Cree]]: [[ᒥᓂᔥᑎᒄ]]
 * [[Crimean Tatar]]: [[ada#Crimean Tatar|ada]]
