/* Alternative forms */ [[tho]] and [[tho’]]. <though#13940584>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -1,5 +1,9 @@
 ==English==
 
+===Alternative forms===
+* [[tho]]
+* [[tho’]]
+
 ===Etymology===
 {{etyl|enm}} {{term|thagh|thagh, thaugh||lang=enm}} from {{etyl|ang|en}} {{term|þeah|þēah|lang=ang}}, later superseded in many dialects by {{etyl|enm}} {{term|though|thogh, though||lang=enm}} from {{etyl|non}} *{{term||þóh}} (later {{term|þó}}), both from {{proto|Germanic|þauh|though}} from {{proto|Indo-European|to-||lang=en}}. Akin to {{etyl|ofs|-}} {{term|þah|þāh||lang=ofs}} "though", {{etyl|osx|-}} {{term|þoh|þōh||lang=osx}} "though" ({{nl}} {{term|doch|doch||lang=nl}}), {{etyl|goh|-}} {{term|doh|dōh||lang=goh}} "though, but, yet, nevertheless" ({{de}} ''[[doch#German|doch]]''). More at [[that]].
 
