--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -97,7 +97,7 @@
 * Czech: {{t+|cs|ostrov|m}}
 * Danish: {{t+|da|ø|c}}, (''of sand'') {{t-|da|holm|c}}, (''of rock'') {{t|da|skær|c}}
 * Dutch: {{t+|nl|eiland|n}}
-* [[Egyptian]]: {{tø|egy|𓈀𓈇𓏤|m|tr=iw}}
+* [[Egyptian]]: {{tø|egy|𓈀𓈇𓏤|m|tr=iw}}, {{tø|egy|𓅁𓇋𓇋𓈅𓏤|f|tr=mai}}
 * Esperanto: {{t-|eo|insulo|xs=Esperanto}}
 * Estonian: {{t-|et|saar}}, {{t|et|ohutussaar}}
 * Faroese: {{t-|fo|oyggj|f|xs=Faroese}}, (small island, or river-island) {{t-|fo|hólmur|m|xs=Faroese}}
