--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -89,7 +89,7 @@
 * [[Chuvash]]: {{tø|cv|утрав|tr=utrav|sc=Cyrl}}
 * Coptic:
 *: Bohairic: {{tø|cop|ⲙⲟⲩⲓ|f|tr=mwi}}, {{tø|cop|ⲛⲏⲥⲟⲥ|f|tr=nisos}}
-*: Sahidic: {{tø|cop|ⲙⲟⲩⲉ|f|tr=mwe}}, {{tø|cop|ⲛⲏⲥⲟⲥ|m|tr=nisos}}
+*: Sahidic: {{tø|cop|ⲙⲟⲩⲉ|f|tr=mwe}}, {{tø|cop|ⲛⲏⲥⲟⲥ|f|tr=nisos}}
 * [[Corsican]]: [[isula]] {{f}}
 * [[Cree]]: [[ᒥᓂᔥᑎᒄ]]
 * [[Crimean Tatar]]: [[ada#Crimean Tatar|ada]]
