--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -4,13 +4,16 @@
 ===Alternative forms===
 * [[musk-rat]]
 
+===Etymology===
+Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]], or perhaps called by an Algonquian name like the Abenaki ''[[moskwas]]'', with the spelling altered under the influence of the English words ''[[musk]]'' and ''[[rat]]''.
+
 ===Pronunciation===
 * {{IPA|/ˈmʌskræt/}}
 
 ===Noun===
 {{en-noun}}
 
-# A large [[aquatic]] [[rodent]], so called for its [[musky]] [[odour]] and because it resembles a [[rat]]; ''Ondatra zibethica''.
+# A large [[aquatic]] [[rodent]]; ''Ondatra zibethica''.
 
 ====Derived terms====
 * [[muskrat-weed]]
@@ -75,6 +78,7 @@
 {{trans-bottom}}
 
 [[Category:en:Rodents]]
+[[Category:English terms derived from Algonquian languages]]
 
 [[et:muskrat]]
 [[eo:muskrat]]
