--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -134,6 +134,7 @@
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
 * [[Kumyk]]: {{tø|kum|атав|tr=ataw|sc=Cyrl}}
 * [[Kyrgyz]]: {{t-|ky|арал|tr=aral|sc=Cyrl|xs=Kyrgyz}}
+* [[Lakota]]: {{tø|lkt|wíta}}
 * [[Lao]]: {{t-|lo|ດອນ|tr=döön|sc=Laoo|xs=Lao}}
 * [[Latgalian]]: {{qualifier|ocean, sea}} {{tø|ltg|jiursola}}, {{qualifier|lake}} {{tø|ltg|azarsola}}, {{qualifier|river}} {{tø|ltg|upsola}}
 * Latin: {{t+|la|insula|f}}
