t+dgr:[[dı]] ([[WT:EDIT|Assisted]]) <island#14003184>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -96,6 +96,7 @@
 * Croatian: {{t+|hr|otok|m}}
 * Czech: {{t+|cs|ostrov|m}}
 * Danish: {{t+|da|ø|c}}, (''of sand'') {{t-|da|holm|c}}, (''of rock'') {{t|da|skær|c}}
+* [[Dogrib]]: {{tø|dgr|dı}}
 * Dutch: {{t+|nl|eiland|n}}
 * [[Egyptian]]: {{tø|egy|𓈀𓈇𓏤|m|tr=iw}}, {{tø|egy|𓅁𓇋𓇋𓈅𓏤|f|tr=mai}}
 * Esperanto: {{t-|eo|insulo|xs=Esperanto}}
