--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -130,6 +130,11 @@ From {{etyl|en|de}} {{term|CD|lang=en}}.
 
 # [[CD#English|CD]], [[compact disk]]
 
+====Derived terms====
+* [[CD機]]
+* [[CD机]]
+* [[CD-jī]]
+
 ----
 
 ==Norwegian==
