t+cy:[[staffio]] ([[WT:EDIT|Assisted]]) <staff#14021463>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -124,6 +124,7 @@
 * Finnish: {{t+|fi|miehittää}}
 {{trans-mid}}
 * French: doter en personnel
+* Welsh: {{t|cy|staffio}}
 {{trans-bottom}}
 
 ===Anagrams===
