/* Adjective */ {{en-adj|er|more}} <auncient#14021654>

--- a/en/a/auncient.720009.wikitext
+++ b/en/a/auncient.720009.wikitext
@@ -1,10 +1,11 @@
 ==English==
 
 ===Adjective===
-{{en-adj}}
+{{en-adj|er|more}}
 
 # {{obsolete form of|ancient}}
 ----
+
 ==Scots==
 
 ===Pronunciation===
