ety, cat <sonoluminescence#14031062>

--- a/en/s/sonoluminescence.855775.wikitext
+++ b/en/s/sonoluminescence.855775.wikitext
@@ -1,5 +1,6 @@
 ==English==
-
+===Etymology===
+{{prefix|sono|luminescence}}
 ===Noun===
 {{wikipedia}}
 {{en-noun|-}}
@@ -13,5 +14,6 @@
 * Romanian: {{t|ro|sonoluminiscență|f}}
 {{trans-bottom}}
 
+[[Category:en:Light sources]]
 [[ta:sonoluminescence]]
 [[vi:sonoluminescence]]
