/* Translations */fix German <West Frisian#14173219>

--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -18,7 +18,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 * Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
 * Esperanto: {{t|eo|okcidentfrisa lingvo|xs=Esperanto}}
 * Finnish: {{t|fi|länsifriisi}}
-* German: {{t+|de|Friesisch|n}}
+* German: {{t+|de|Westfriesisch|n}}
 {{trans-mid}}
 * Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
 * Japanese: {{t+|ja|フリジア語|tr=Furijia-go}}, {{t|ja|フリース語|tr=Furīsu-go}}
