add some cute little [[bunny rabbit]]s to the page <rabbit#14241653>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -24,12 +24,15 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 # {{cricket}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
 
 =====Synonyms=====
+{{sense|animal}}
 * [[bunny]] (''[[hypocoristic]]'', ''[[colloquial]]'', ''[[pet name]]'')
+* [[bunny rabbit]] (''[[hypocoristic]]'', ''[[colloquial]]'', ''[[pet name]]'')
 * [[coney]], [[cony]] (''dialect'')
 
 =====Derived terms=====
 {{rel-top3|Terms derived from the noun "rabbit"}}
 * [[breed like rabbits]]
+* [[bunny rabbit]]
 * [[fuck like rabbits]]
 * [[jackrabbit]]
 {{rel-mid3}}
