/* Middle Dutch */ <bet#14243428>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -184,7 +184,7 @@ From {{etyl|odt|dum}} {{term|bit|lang=odt}}.{{rfe|Is this bi+met?|lang=dum}}
 ===Etymology 2===
 
 ====Adverb====
-{{infl|dum|adverb|cat2=adverb comparative forms}}
+{{dum-adv|cat2=adverb comparative forms}}
 
 # {{alternative form of|bat|lang=dum}}
 
