--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -238,6 +238,14 @@ From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt
 
 ----
 
+==Gothic==
+===Romanization===
+{{got-rom}}
+
+# {{got-romanization of|𐌰𐍄}}
+
+----
+
 ==Irish==
 
 ===Etymology===
