t+da:[[masse]] ([[WT:EDIT|Assisted]]) <weight#14258966>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -143,7 +143,7 @@
 * Arabic: {{t+|ar|وزن}}
 * Armenian: {{t-|hy|զանգված|tr=zangvaç}}
 * Czech: {{t-|cs|váha|f}}
-* Danish: {{t|da|vægt|c}}
+* Danish: {{t|da|vægt|c}}, {{t|da|masse|c}}
 * Faroese: {{t|fo|vekt|f}}
 * Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|masse}}
